--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="row column large-9 xlarge-6 xxlarge-4">
       <h2 class="section-title">How Does This Work?</h2>
       <p class="content">
-        In today’s fast paced world, you’ve got places you need to be but not enough time in your jam packed schedule. Wouldn’t it be nice if there were a transportation service that changed the way you get around daily? Introducing Wild Rydes, an innovative transportation service that helps people get to their destination faster and hassle-free. Getting started is as easy as tapping a button in our app.
+        Wild Rydes is a breakthrough transportation service created by Fei, Bibek, Anurag and Arko. It uses quantum entanglement and unicorns to move people around different universes within a few minutes. It is also the largest gig marketplace for unicorn riders who can earn 10x minimum wage, and even get paid in crypto. Join us!
       </p>
     </div>
 
