--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="row column large-9 xlarge-6 xxlarge-4">
       <h2 class="section-title">How Does This Work?</h2>
       <p class="content">
-        Wild Rydes is a breakthrough transportation service created by Fei, Bibek, Anurag and Arko. It uses quantum entanglement and unicorns to move people around different universes within a few minutes. It is also the largest gig marketplace for unicorn riders who can earn 10x minimum wage, and even get paid in crypto. Join us!
+        Wild Rydes is a breakthrough transportation service which uses quantum entanglement and unicorns to move people around different universes within a few minutes. It is also the largest gig marketplace for unicorn riders who can earn 10x minimum wage, and even get paid in crypto. Join us!
       </p>
     </div>
 
@@ -71,7 +71,7 @@
     <div class="row column large-9 xlarge-6 xxlarge-4">
       <h2 class="section-title">Our Story</h2>
       <p class="content">
-        Wild Rydes was started by former hedge fund analysts and software developers. The long-time friends happened upon the Wild Rydes idea after attending a silent yoga retreat in Nevada. After gazing upon the majestic herds of unicorns prancing across a surreal Nevada sunset, they witnessed firsthand the poverty and unemployment endemic to that once proud race. Whether it was modern society’s reliance on science over magic or not, we’ll never know the cause of their Ozymandian downfall and fade to obscurity. Moved by empathy, romance, and free enterprise, they saw an opportunity to marry society’s demand for faster, more flexible transportation to underutilized beasts of labor through an on-demand market making transportation app. Using the founders’ respective expertise in animal husbandry and software engineering, Wild Rydes was formed and has since raised untold amounts of venture capital. Today, Wild Rydes has thousands of unicorns in its network fulfilling hundreds of rydes each day.
+        Wild Rydes was started by APX and PS developers. The long-time friends happened upon the Wild Rydes idea after attending a silent yoga retreat in Nevada. After gazing upon the majestic herds of unicorns prancing across a surreal Nevada sunset, they witnessed firsthand the poverty and unemployment endemic to that once proud race. Whether it was modern society’s reliance on science over magic or not, we’ll never know the cause of their Ozymandian downfall and fade to obscurity. Moved by empathy, romance, and free enterprise, they saw an opportunity to marry society’s demand for faster, more flexible transportation to underutilized beasts of labor through an on-demand market making transportation app. Using the founders’ respective expertise in animal husbandry and software engineering, Wild Rydes was formed and has since raised untold amounts of venture capital. Today, Wild Rydes has thousands of unicorns in its network fulfilling hundreds of rydes each day.
       </p>
     </div>
   </section>
