--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </ul>
     </nav>
     <button type="button" class="btn-menu"><span>Menu</span></button>
-    <button class="home-button" id="checkoutButton">Book a unicorn</a>
+    <button class="home-button" id="checkoutButton">Book a unicorn!</a>
   </header>
 
   <section class="home-about">
