Fixing Stripe checkout subs

--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
       <div id="div-stripe-selection">
         <div id="div-stripe-selection-internal">
           <p>Select checkout experience:</p>
-          <input type="radio" id="radio-checkoutSession" name="fav_language" value="CheckoutSession">
+          <input type="radio" id="radio-checkoutSession" name="stripeSelection" value="CheckoutSession">
           <label for="radio-checkoutSession">Single payment with Stripe Checkout (hosted)</label><br>
-          <input type="radio" id="radio-checkoutSessionSubscription" name="fav_language" value="CheckoutSessionSubscription">
+          <input type="radio" id="radio-checkoutSessionSubscription" name="stripeSelection" value="CheckoutSessionSubscription">
           <label for="radio-checkoutSessionSubscription">Subscription with Stripe Checkout (hosted)</label><br>
-          <input type="radio" id="radio-paymentElement" name="fav_language" value="PaymentElement">
+          <input type="radio" id="radio-paymentElement" name="stripeSelection" value="PaymentElement">
           <label for="radio-paymentElement">Single payment with Stripe Payment Element (widget)</label><br>
-          <input type="radio" id="radio-paymentElementSubscription" name="fav_language" value="PaymentElementSubscription">
+          <input type="radio" id="radio-paymentElementSubscription" name="stripeSelection" value="PaymentElementSubscription">
           <label for="radio-paymentElementSubscription">Subscription with Stripe Payment Element (widget)</label><br>
         </div>
       </div>
